[package]
name = "poliwarden"
version = "1.0.0"
edition = "2021"

[features]
default = ["surreal"]
http = []
https = []
surreal = ["surrealdb"]

[[bin]]
name = "poliwarden"
path = "./src/main.rs"

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
once_cell = { version = "1.19.0", default-features = false }
regex = { version = "1.10.5", default-features = false }
serde = { version = "1.0.204", default-features = true, features = ["derive"] }
surrealdb = { version = "1.5.4", default-features = false, optional = true }
tokio = { version = "1.39.1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }
ulid = { version = "1.1.3", default-features = false }
